[package]
name = "chatgpt_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
